--- a/detail/resolve-demo/package.json
+++ b/detail/resolve-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module-demo",
+  "name": "resolve-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,15 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^1.0.0",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "node-sass": "^4.9.3",
-    "sass": "^1.13.0",
-    "sass-loader": "^7.1.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
