--- a/actual-combat/vue-demo/package.json
+++ b/actual-combat/vue-demo/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server --hot --open"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,8 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
     "vue": "^2.5.17"
