--- a/actual-combat/vue-demo/package.json
+++ b/actual-combat/vue-demo/package.json
@@ -14,7 +14,10 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^0.22.1",
+    "url-loader": "^3.0.0",
     "vue-loader": "^15.4.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
